# Autopilot

./: .gitignore  CMakeLists.txt  Makefile  README.md  datarefs.json  navigation.json  test.cpp
include/: AircraftGuidance.h  AircraftIO.h  AircraftState.h  ErrorCalculator.h  FlightState.h  JsonLoader.h  NavigationDataProvider.h  NavigationWindow.h  NavigationWindowRenderer.h  PID.h  Types.h  Waypoint.h
src/: AircraftIO.cpp  ErrorCalculator.cpp  FlightState.cpp  JsonLoader.cpp  NavigationDataProvider.cpp  NavigationWindow.cpp  NavigationWindowRenderer.cpp  PID.cpp  Waypoint.cpp
